--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
