--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> 
 </head>
-<html>
+
 <div id="main">
     <div id="mainContent">
     </div>
