remove loaded third party page after it loads

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> 
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">   
 </head>
-
+<body>
 <div id="main">
     <div id="mainContent">
     </div>
 </div>
-
+</body>
 </html>
