job skills and description text box

--- a/index.html
+++ b/index.html
@@ -35,18 +35,24 @@
                             <button class="tabButton centerButton btn btn-md btn-warning">URL</button>
                         </div>
                     </div>
-                    <textarea class="textArea"></textarea>
+                    <textarea class="textArea form-control"></textarea>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="box img-rounded">
                     <ul class="list-group">
-                        <li class="list-group-item">First item</li>
                         <li class="list-group-item">
-                            
+                            <input placeholder="1st Skill Name" class="form-control"></input>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>     
                         </li>
-                        <li class="list-group-item">Second item</li>
-                        <li class="list-group-item">Third item</li>
+                        <li class="list-group-item">
+                            <input placeholder="2nd Skill Name" class="form-control"></input>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea> 
+                        </li>
+                        <li class="list-group-item">
+                            <input placeholder="3rd Skill Name" class="form-control"></input>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea> 
+                        </li>
                     </ul>
                 </div>
             </div>
