--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
                         </div>
                     </div>
                     <textarea class="textArea form-control"></textarea>
+                    <div class="footButton">
+                            <button class="centerButton btn-lg btn-success">analyze!</button>
+                    </div>
                 </div>
+                
             </div>
             <div class="col-md-6">
                 <div class="box img-rounded">
-                    <ul class="list-group">
+                    <ul id="skillList" class="list-group">
                         <li class="list-group-item">
                             <input placeholder="1st Skill Name" class="form-control"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>     
@@ -57,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="footButton"><button class="centerButton btn-lg btn-success">generate!</button></div>
+        <div class="footButton"><button class="centerButton btn-lg btn-danger">generate!</button></div>
     </div>
 </body>
 
