onclick function template

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                             <button class="tabButton centerButton btn btn-md btn-warning">URL</button>
                         </div>
                     </div>
-                    <textarea class="textArea form-control"></textarea>
+                    <textarea id="pureText" class="textArea form-control"></textarea>                    
+                    <textarea id="urlText" class="textArea form-control" style="display:none;"></textarea>
                     <div class="footButton">
                             <button class="centerButton btn-lg btn-success">analyze!</button>
                     </div>
