button text switch

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <div class="box img-rounded">
                     <div class="tabBar row">
                         <div class="col-sm-4">
-                            <button class="tabButton centerButton btn btn-md btn-info">Text</button>
+                            <button id="textButton" class="tabButton centerButton btn btn-md btn-info" onclick="pressTextButton()">Text</button>
                         </div>
                         <div class="col-sm-4">
                             <div class="text-center"><h3>OR</h3></div>
                         </div>
                         <div class="col-sm-4">
-                            <button class="tabButton centerButton btn btn-md btn-warning">URL</button>
+                            <button id="urlButton" class="tabButton centerButton btn btn-md btn-warning" onclick="pressUrlButton()">URL</button>
                         </div>
                     </div>
                     <textarea id="pureText" class="textArea form-control"></textarea>                    
