--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/IOControl.js"></script>
+    <script src="./js/graphGeneration.js"></script>
 </head>
 
 <body>
