returns an array of json objects for all skills
return false if skill list is empty or contains empty field(s)

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                 <div id="skillGroup" class="box img-rounded">
                     <ul id="skillList" class="list-group">
                         <li class="list-group-item">
-                            <input placeholder="Skill Name" class="form-control"></input>
+                            <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
                             <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
-                            <input placeholder="Skill Name" class="form-control"></input>
+                            <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
                             <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
-                            <input placeholder="Skill Name" class="form-control"></input>
+                            <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
                             <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
