enter btn to all buttoms

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div id="chart_div"></div>
                     <div class="footButton">
                         <input type="checkbox" id="default_list_indicator">Do you want to use default Computer Science list?</input>
-                        <button id="analyze_button" class="centerButton btn-lg btn-success">analyze!</button>
+                        <button id="analyze_button" class="centerButton btn btn-lg btn-success">analyze!</button>
                     </div>
                 </div>
 
@@ -56,25 +56,25 @@
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
-                            <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
+                            <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
-                            <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
+                            <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName"></input>
                             <textarea placeholder="Skill Description" class="skillTextArea form-control" rows="4"></textarea>
-                            <button class="btn-md btn-danger" onclick="removeSkill(this)">delete</button>
+                            <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                     </ul>
-                    <button class="centerButton btn-lg btn-info" onclick="createSkill()">Create</button>
+                    <button class="centerButton btn btn-lg btn-info" onclick="createSkill()">Create</button>
                 </div>
             </div>
         </div>
         <div class="footButton">
-            <button id="footButton" class="centerButton btn-lg btn-danger">generate!</button>
+            <button id="footButton" class="centerButton btn btn-lg btn-danger">generate!</button>
         </div>
     </div>
 </body>
