name each content row

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Sniper - cover letter generator</h2>
         </div>
         <div class="row contentRow">
-            <div class="col-md-6">
+            <div id="leftRow" class="col-md-6">
                 <div class="box img-rounded">
                     <div class="tabBar row">
                         <div class="col-sm-5">
@@ -50,7 +50,7 @@
                 </div>
 
             </div>
-            <div class="col-md-6">
+            <div id="rightRow" class="col-md-6">
                 <div id="skillGroup" class="box img-rounded">
                     <ul id="skillList" class="list-group">
                         <li class="list-group-item">
