move chart div inside left side div; graph output enhencement; default list option enabled; functionality seperation;

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-    <div id="chart_div"></div>
     <div id="main">
         <div id="mainContent">
         </div>
@@ -27,10 +26,12 @@
         </div>
         <div class="row contentRow">
             <div id="leftRow" class="col-md-6">
+                <div id="chart_div"></div>
                 <div class="box img-rounded">
                     <div class="tabBar row">
                         <div class="col-sm-5">
-                            <button id="textButton" class="tabButton centerButton btn btn-md btn-info" onclick="pressTextButton()" onfocus="moveColumnToRight()" onfocusout="resetColumn()">Text</button>
+                            <button id="textButton" class="tabButton centerButton btn btn-md btn-info" onclick="pressTextButton()" onfocus="moveColumnToRight()"
+                                onfocusout="resetColumn()">Text</button>
                         </div>
                         <div class="col-sm-2">
                             <div class="text-center">
@@ -38,10 +39,11 @@
                             </div>
                         </div>
                         <div class="col-sm-5">
-                            <button id="urlButton" class="tabButton centerButton btn btn-md btn-warning" onclick="pressUrlButton()" onfocus="moveColumnToRight()" onfocusout="resetColumn()">URL</button>
+                            <button id="urlButton" class="tabButton centerButton btn btn-md btn-warning" onclick="pressUrlButton()" onfocus="moveColumnToRight()"
+                                onfocusout="resetColumn()">URL</button>
                         </div>
                     </div>
-                    <textarea id="pureText" onfocus="moveColumnToRight()" onfocusout="resetColumn()"  class="textArea form-control"></textarea>
+                    <textarea id="pureText" onfocus="moveColumnToRight()" onfocusout="resetColumn()" class="textArea form-control"></textarea>
                     <textarea id="urlText" onfocus="moveColumnToRight()" onfocusout="resetColumn()" class="textArea form-control" style="display:none;"></textarea>
                     <div class="footButton">
                         <input type="checkbox" id="default_list_indicator" onfocus="moveColumnToRight()" onfocusout="resetColumn()">Do you want to use default Computer Science list?</input>
@@ -55,17 +57,20 @@
                     <ul id="skillList" class="list-group">
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"></input>
-                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()" rows="4"></textarea>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"
+                                rows="4"></textarea>
                             <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"></input>
-                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()" rows="4"></textarea>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"
+                                rows="4"></textarea>
                             <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                         <li class="list-group-item">
                             <input placeholder="Skill Name" class="form-control skillName" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"></input>
-                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()" rows="4"></textarea>
+                            <textarea placeholder="Skill Description" class="skillTextArea form-control" onfocus="moveColumnToLeft()" onfocusout="resetColumn()"
+                                rows="4"></textarea>
                             <button class="btn btn-md btn-danger" onclick="removeSkill(this)">delete</button>
                         </li>
                     </ul>
