added generate result panel

--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
             </div>
         </div>
         <div class="footButton">
-            <button id="footButton" class="centerButton btn btn-lg btn-danger">generate!</button>
+            <button id="generate_button" class="centerButton btn btn-lg btn-danger">generate!</button>
+        </div>
+    </div>
+    <div id="result">
+        <div class="titleText">
+            <button id="back_button" class="leftButton btn btn-md btn-danger">back</button>
+            <h2>Sniper - your cover letter:</h2>
         </div>
     </div>
 </body>
