create new JS; fix TODO:handle error message

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/IOControl.js"></script>
+    <script src="./js/coverLetter.js"></script>
     <script src="./js/graphGeneration.js"></script>
 </head>
 
