change result div to textarea

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <button id="back_button" class="leftButton btn btn-md btn-danger">back</button>
             <h2>Sniper - your cover letter:</h2>
         </div>
-        <div id="resultText" class="resultText"></div>
+        <textarea id="resultText" class="resultText"></textarea>
     </div>
 </body>
 
