storage functionnalities implemented

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./js/IOControl.js"></script>
     <script src="./js/coverLetter.js"></script>
     <script src="./js/graphGeneration.js"></script>
+    <script src="./js/localSaving.js"></script>
 </head>
 
 <body>
